fixed broken tests